--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 spring:
   jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: create
     properties:
@@ -8,7 +9,7 @@ spring:
         show_sql: true
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:~/retroboard
+    url: jdbc:h2:mem:retroboard
     username: sa
     password:
 
