--- a/pom.xml
+++ b/pom.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.4</version>
-	</parent>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.4.4</version>
+    </parent>
 
-	<groupId>com.retro</groupId>
-	<artifactId>retro-app</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>retro-app</name>
-	<description>Demo project for Spring Boot</description>
+    <groupId>com.retro</groupId>
+    <artifactId>retro-app</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>retro-app</name>
+    <description>Demo project for Spring Boot</description>
 
-	<properties>
+    <properties>
         <java.version>11</java.version>
-	</properties>
+    </properties>
 
 
-	<dependencies>
+    <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -95,6 +95,20 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>5.3.8.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- jaxb-api is no longer among standard libs since java 9 -->
         <dependency>
             <groupId>javax.xml.bind</groupId>
@@ -104,8 +118,8 @@
 
     </dependencies>
 
-	<build>
-		<plugins>
+    <build>
+        <plugins>
 
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -129,7 +143,7 @@
                     <release>11</release>
                 </configuration>
             </plugin>
-		</plugins>
-	</build>
+        </plugins>
+    </build>
 
 </project>
