--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>retro-app</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>retro-app</name>
-    <description>Demo project for Spring Boot</description>
+    <description>A simple retro board application to revise core spring boot concepts</description>
 
     <properties>
         <java.version>11</java.version>
